<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        tools:text="Item"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_deleteitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_itemname"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:src="@drawable/ic_delete"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@id/tv_itemname"
        android:layout_marginEnd="20sp"
        android:contentDescription="@string/iv_deleteitem" />

    <TextView
        android:id="@+id/tv_itemcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_itemname"
        tools:text="Category"
        android:textSize="22sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"/>

    <TextView
        android:id="@+id/tv_itemquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_itemcategory"
        tools:text="1"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:layout_marginLeft="30sp" />

    <ImageView
        android:id="@+id/iv_additem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle"
        android:layout_alignRight="@id/tv_itemquantity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@id/tv_itemquantity"
        android:layout_marginTop="115sp"
        android:layout_marginRight="95sp"
        android:layout_marginEnd="95sp"
        android:contentDescription="@string/iv_additem" />

    <ImageView
        android:id="@+id/iv_minusitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_minus_circle"
        android:layout_alignRight="@id/tv_itemquantity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@id/tv_itemquantity"
        android:layout_marginTop="115sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        android:contentDescription="@string/iv_minusitem"/>

    <CheckBox
        android:id="@+id/cb_isBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_itemname"
        android:layout_alignEnd="@id/tv_itemname"
        android:layout_marginTop="12sp"
        android:layout_marginLeft="120sp"
        android:layout_marginStart="120sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80sp"
        android:layout_marginEnd="80sp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>